changed the way active class is applied, unselect selected facility upon successful pairing, closes #6

--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -19,7 +19,7 @@ html
                     th  Community
                     th  Facility Type
                 tbody
-                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:nmisHealthSearch')(ng-click="select(facility)", ng-class='{active: facility.active == "active", matched: isMatched(facility._id)}')
+                  tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:nmisHealthSearch')(ng-click="select(facility)", ng-class='{active: currentNMIS._id == facility._id, matched: isMatched(facility._id)}')
                     td 
                     td {{$index+1}}
                     td {{facility.ward}}
