--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -14,10 +14,14 @@ html
                 thead
                     th
                     th  ID
-                    th  Ward
-                    th  Facility Name
-                    th  Community
-                    th  Facility Type
+                    th
+                      a(ng-click = "predicate = 'ward'; reverse = false") Ward
+                    th
+                      a(ng-click = "predicate = 'school_name'; reverse = false") Facility Name
+                    th
+                      a(ng-click = "predicate = 'community'; reverse = false") Community
+                    th
+                      a(ng-click = "predicate = 'level_of_education'; reverse = false") Facility Type
                 tbody
                   tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:nmisHealthSearch')(ng-click="select(facility)", ng-class='{active: currentNMIS._id == facility._id, matched: isMatched(facility._id)}')
                     td 
@@ -43,10 +47,14 @@ html
                   tr
                     th
                     th  ID
-                    th  Ward
-                    th  Facility Name
-                    th  Community
-                    th  Facility Type
+                    th
+                      a(ng-click = "predicate = 'ward_name'; reverse = false") Ward
+                    th
+                      a(ng-click = "predicate = 'school_name'; reverse = false") Facility Name
+                    th
+                      a(ng-click = "predicate = 'com_name'; reverse = false") Community
+                    th
+                      a(ng-click = "predicate = 'level_of_education'; reverse = false") Facility Type
                 tbody
                   tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:lgaHealthSearch', ng-class='{matched: isMatched(facility._id)}')
                     td  
