--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -72,12 +72,10 @@ html
             .pairs(ng-repeat='pair in pairs')
               button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
                i.icon-putback
-              dl 
-                dt Facility
-                dd {{pair.school_name}}
-                &nbsp;matches&nbsp;
-                dt NMIS
-                dd {{pair.nmis.school_name}}
+              dl
+                b {{pair.school_name}}
+                &nbsp; (Facility List) -- (Baseline) &nbsp;
+                b {{pair.nmis.school_name}}
           div.putback-guidance If you made an error, put facilities back by clicking 
             button.btn.btn-small.btn-putback
               i.icon-putback
