--- a/public/css/app.css
+++ b/public/css/app.css
@@ -119,6 +119,13 @@ body {
   font-weight: bold;
   background-position: 0 0;
 }
+.download{
+  font-weight: bold;
+  font-size: 15px;
+  margin-top: 15px;
+  margin-right: 10px;
+  float: right;
+}
 h3{
   font-weight: normal;
   margin-top: -10px;
