Adding state name, changing one undo button that was left

--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -78,4 +78,4 @@ html
                 b {{pair.nmis.school_name}}
           div.putback-guidance If you made an error, put facilities back by clicking 
             button.btn.btn-small.btn-putback
-              i.icon-putback
+              .undo undo
