removing the link behind the shuttle button; add when its implemented

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ html(ng-app="myApp")
     .navbar
       .navbar-inner
         .container
-          a.brand(href='#')
+          a.brand
             img(src='/images/logo.png')
             | NMIS/LGA Facility Matching Tool
           span.lga LGA: {{current_lga_name}}
