--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,247 +1,1 @@
-/** overall layout **/
-html, body, .main-wrapper, .main, #matches_list, .inner{
-	height: 100%;
-}
-.navbar{
-  margin-bottom: 5px;
-}
-.main-wrapper{
-  position: relative;
-}
-.main {
-  width: 75%;
-  display: inline-block;
-}
-#matches_list{
-  position: absolute;
-  top: 0;
-  width: 25%;
-  box-sizing: border-box;
-  display: inline-block;
-  padding: 0 15px;
-}
-.view{
-	height: 90%;
-	overflow: hidden;
-}
-#nmis_list, #lga_list{
-  height: 50%;
-}
-.table-wrapper{
-  height: 80%;
-}
-.inner{
-  padding: 25px;
-  box-sizing: border-box;
-}
-#lga_list .inner{
-  padding-top: 0;
-}
-.table-wrapper{
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  overflow-y: auto;
-}
-[id^="matched_list_"]{
-  position: relative;
-  height: 100%;
-}
-.pairs-wrapper{
-  height: 80%;
-  padding-right: 10px;
-  overflow-y: auto;
-}
-.putback-guidance{
-  position: absolute;
-  bottom: 0;
-}
-
-
-/* navbar quick fixes but needs to be done better */
-.navbar .brand{
-  padding-top: 15px;
-  color: black;
-  font-weight: 800;
-}
-.navbar .nav{
-  padding-top: 5px;
-  margin-left: 40px;
-}
-.navbar .nav > .active > a, .navbar .nav > .active > a:hover{
-  background: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-.nav .active{
-  font-weight: bold;
-  text-decoration: underline;
-}
-
-.brand img{
-  width: 24px;
-  margin: -8px 8px 0 0;
-}
-.navbar-inner{
-  background: rgb(240,240,240);
-  border: none;
-  -webkit-box-shadow: none;
-  -mox-box-shadow: none;
-  box-shadow: none;
-}
-.navbar-inner .lga{
-  float: left;
-  padding-top: 15px;
-  margin-left: 10px;
-}
-.navbar .btn.printouts{
-  color: rgb(8, 88, 129);
-  float: right;
-  margin-top: 10px;
-}
-
-
-/**** visual styles ****/
-body {
-  font-size: 13px;
-  background: rgb(240,240,240);
-	padding-left: 5px; padding-right: 5px;
-}
-.main{
-  background-color: rgb(63,98,116);
-}
-.icon-putback{
-  background-image: url("../images/icon-putback.png");
-  background-position: 0 0;
-}
-.undo{
-  font-weight: bold;
-  background-position: 0 0;
-}
-.download{
-  font-weight: bold;
-  font-size: 15px;
-  margin-top: 15px;
-  margin-right: 10px;
-  float: right;
-}
-h3{
-  font-weight: normal;
-  margin-top: -10px;
-  margin-bottom: 0;
-}
-h4{
-  margin-top: -3px;
-}
-h3 .unmatched{
-  color: rgb(178,196,204);
-}
-h4 .matched-length{
-  color: rgb(100,100,100);
-}
-.guidance{
-  font-size: 15px;
-  color: rgb(144, 213, 248);
-  margin-bottom: 10px;
-}
-
-/**** table style ****/
-table{
-  font-size: 13px;
-  empty-cells: show;
-  table-layout: fixed;
-  background-color: #fafafa;
-}
-.table{
-  margin-bottom: 0;
-}
-.table th, .table td{
-  padding: 2px;
-  word-wrap: break-word;
-  border: 1px solid #ddd;
-}
-th:first-child{
-  width: 55px;
-}
-th:nth-child(2), td:nth-child(2){
-  text-align: center;
-  width: 6%;
-}
-th:nth-child(3){
-  width: 15%;
-}
-th:nth-child(4){
-  width: 29%;
-}
-th:nth-child(5){
-  width: 16%;
-}
-tbody tr:hover{
-  background-color: #dddddd;
-}
-tbody tr.active td, tbody tr.active:hover td{
-  background-color: rgb(132, 201, 235);
-  font-weight: bold;
-}
-tbody tr.active td:first-child{
-  background-image: url("../images/icon-star.png");
-  background-repeat: no-repeat;
-  background-position: 21px 3px;
-}
-tbody tr.matched{
-  opacity: 0.5;
-  display: none;
-}
-
-.search{
-  font-weight: normal;
-  float: right;
-  margin-bottom: 0;
-}
-input[type="search"]{
-  margin-left: 10px;
-}
-.btn-match, .guidance .btn-match:hover, .guidance .btn-match:focus{
-  background: rgb(132, 201, 235);
-  font-weight: bold;
-  font-size: 13px;
-  padding: 0 7px 2px 7px;
-}
-.star{
-  display: inline-block;
-  width: 60px;
-  height: 25px;
-  background: rgb(132, 201, 235) url("../images/icon-star.png") no-repeat 21px 3px;
-  margin: 0 0 -10px 0;
-}
-#lga_list{
-  padding-bottom: 0;
-}
-#nmis_list{
-  padding-top: 0;
-}
-#nmis_list h3, #lga_list h3, .search{
-  color: #ffffff;
-}
-.pairs{
-  border-bottom: 1px solid #aaa;
-}
-.pairs dt, dd{
-  font-weight: bold;
-}
-.pairs dt{
-  display: inline;
-}
-.pairs dd{
-  display: inline;
-}
-.btn-putback{
-  float: right;
-}
-.putback-guidance .btn-putback{
-  float: none;
-}
-.hover{
-  cursor: pointer;
-};
+html,body,.main-wrapper,.main,#matches_list,.inner{height:100%}.navbar{height:60px;margin-bottom:5px}.view{height:89%;overflow:hidden}.main-wrapper{position:relative}.main{width:75%;display:inline-block}.main #nmis_list,.main #lga_list{height:50%}.main #lga_list{padding-bottom:0}.main #lga_list .inner{padding-top:0}.main #nmis_list{padding-top:0}.main .table-wrapper{margin:0;padding:0;width:100%;overflow-y:auto;height:80%}.main .inner{padding:25px;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box}#matches_list{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-o-box-sizing:border-box;-ms-box-sizing:border-box;box-sizing:border-box;position:absolute;top:0;width:25%;display:inline-block;padding:0 15px}#matches_list [id^="matched_list_"]{position:relative;height:100%}#matches_list .putback-guidance{position:absolute;bottom:0}#matches_list .pairs-wrapper{height:80%;padding-right:10px;overflow-y:auto}.navbar .brand{padding-top:15px;color:black;font-weight:800}.navbar .brand img{width:24px;margin:-8px 8px 0 0}.navbar .nav{padding-top:5px;margin-left:40px}@media (max-width: 1200px){.navbar .nav{margin-left:10px}}.navbar .nav .active{font-weight:bold;text-decoration:underline}.navbar .nav .active>a,.navbar .nav .active>a:hover{-webkit-box-shadow:none;-moz-box-shadow:none;-o-box-shadow:none;-ms-box-shadow:none;box-shadow:none;background:none}.navbar .navbar-inner{background:#f0f0f0;border:none;-webkit-box-shadow:none;-moz-box-shadow:none;-o-box-shadow:none;-ms-box-shadow:none;box-shadow:none}.navbar .navbar-inner .lga{float:left;padding-top:15px;margin-left:10px}.navbar .download{font-weight:bold;font-size:15px;margin-top:10px;float:right}@media (max-width: 1050px){.navbar .download{margin-top:0}}.navbar .download span{display:inline-block;margin-right:5px;vertical-align:middle}@media (max-width: 1050px){.navbar .download span{display:block;text-align:center}}.navbar .download .btn.printouts{margin-top:0;color:#085881}body{font-size:13px;background:#f0f0f0;padding-left:5px;padding-right:5px}.main{background-color:#3f6274}h3{font-weight:normal;margin-top:-10px;margin-bottom:0}h4{margin-top:-3px}h3 .unmatched{color:#b2c4cc}h4 .matched-length{color:#646464}.guidance{font-size:15px;color:#90d5f8;margin-bottom:10px}table,.table{font-size:13px;empty-cells:show;table-layout:fixed;background-color:#f0f0f0;margin-bottom:0}table th,table td,.table th,.table td{padding:2px;word-wrap:break-word;border:1px solid #ddd}table th:first-child,.table th:first-child{width:55px}table th:nth-child(2),table th:nth-child(2),.table th:nth-child(2),.table th:nth-child(2){text-align:center;width:6%}table th:nth-child(3),.table th:nth-child(3){width:15%}table th:nth-child(4),.table th:nth-child(4){width:29%}table th:nth-child(5),.table th:nth-child(5){width:16%}table tbody tr:hover,.table tbody tr:hover{background-color:#dddddd}table tbody tr.active td,table tbody tr.active:hover td,.table tbody tr.active td,.table tbody tr.active:hover td{background-color:#84c9eb;font-weight:bold}table tbody tr.active td:first-child,table tbody tr.active:hover td:first-child,.table tbody tr.active td:first-child,.table tbody tr.active:hover td:first-child{background:#84c9eb url("../images/icon-star.png") no-repeat 21px 3px}table tbody tr.matched,.table tbody tr.matched{opacity:0.5;display:none}.search{font-weight:normal;float:right;margin-bottom:0}.search input{margin-left:10px}.btn-match,.guidance .btn-match:hover,.guidance .btn-match:focus{background:#84c9eb;font-weight:bold;font-size:13px;padding:0 7px 2px 7px}.star{background:#84c9eb url("../images/icon-star.png") no-repeat 21px 3px;display:inline-block;width:60px;height:25px;margin:0 0 -10px 0}#nmis_list h3,#lga_list h3,.search{color:#ffffff}.pairs{border-bottom:1px solid #aaa}.pairs .btn-putback{float:right;font-weight:bold}.pairs .putback-guidance .btn-putback{float:none}.hover{cursor:pointer}
