--- a/views/layout.jade
+++ b/views/layout.jade
@@ -20,12 +20,13 @@ html(ng-app="myApp")
           span.lga {{current_lga_name | uppercase}} lga, {{current_state_name | uppercase}} state
           ul.nav
             li.hover(class="ng-class:{ active: currentSector == 'health'}")
-              a(ng-click="changeView('health')") Health Facilities
+              a(ng-click="changeView('health')") Health
             li.hover(class="ng-class:{ active: currentSector == 'edu'}")
-              a(ng-click="changeView('education')") Education Facilities
-          a.button.btn.printouts(ng-href='/api/download/nmis/{{current_lga}}/{{currentSector}}',target='_blank') BASELINE
-          a.button.btn.printouts(ng-href='/api/download/lga/{{current_lga}}/{{currentSector}}',target='_blank') FACILITY
-          .download Download Lists:
+              a(ng-click="changeView('education')") Education
+          .download
+            span Download Lists:
+            a.button.btn.printouts(ng-href='/api/download/nmis/{{current_lga}}/{{currentSector}}',target='_blank') BASELINE
+            a.button.btn.printouts(ng-href='/api/download/lga/{{current_lga}}/{{currentSector}}',target='_blank') FACILITY
 
     div.view(ng-view)
     block body
