ward name change in education to ward num

--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -67,7 +67,7 @@ html
                     td  
                       button.btn.btn-small.btn-match(ng-click='match(facility)') Match
                     td {{$index+1}}
-                    td {{facility.ward_name}}
+                    td {{facility.ward_num}}
                     td {{facility.school_name}}
                     td {{facility.com_name}}
                     td {{facility.level_of_education}}
