--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -66,7 +66,7 @@ html
                   tr(ng-repeat='facility in facilities | orderBy:predicate:reverse | filter:lgaHealthSearch', ng-class='{matched: isMatched(facility._id)}')
                     td  
                       button.btn.btn-small.btn-match(ng-click='match(facility)') Match
-                    td {{facility.seq_id}}
+                    td {{$index + 1}}
                     td  {{facility.ward}}
                     td  {{facility.facility_name}}
                     td  {{facility.community}}
