--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -80,7 +80,7 @@ html
               button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
                 .undo undo
               p
-                strong {{pair.health_facility_name}}
+                strong {{pair.facility_name}}
                 | &nbsp; (Facility List) -- (Baseline) &nbsp;
                 strong {{pair.nmis.facility_name}}
           div.putback-guidance If you made an error, put facilities back by clicking 
