functional rejection (no match) functionality

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -183,15 +183,20 @@ table, .table{
       width: 16%;} }
   tbody tr{
     &:hover{
-    background-color: #dddddd; }
+    background-color: #dddddd;
+      .btn-nomatch{
+        visibility: visible;} }
     &.active td, &.active:hover td{
       background-color: $highlight;
       font-weight: bold;
+      .btn-nomatch{
+        visibility: visible;}
       &:first-child{
         @include star;} }
-    &.matched{
-      opacity: 0.5;
-      display: none; } } }
+    &.rejected{
+      opacity: 0.5; 
+      &:hover{
+      opacity: 0.8; } } } }
 
 .search{
   $shift: 8px;
@@ -206,6 +211,18 @@ table, .table{
   font-weight: bold;
   font-size: 13px;
   padding: 0 7px 2px 7px; }
+
+.btn-nomatch{
+  visibility: hidden;
+  float: right;
+  width: 20px;
+  padding: 0;
+  height: 20px;
+  &.remove{
+    background: url(/images/icon-nomatch-remove.png);}
+  &.addback{
+    background: url(/images/icon-nomatch-addback.png);} }
+
 .star{
   @include star;
   display: inline-block;
@@ -229,3 +246,26 @@ table, .table{
 //?
 .hover{
   cursor: pointer; }
+
+.popover{
+  .popover-title{
+    font-weight: bold;
+    word-break: break-all;
+    color: black !important; }
+  form{
+    label{
+      span{
+        display: block;
+        margin-left: 20px;} }
+    input[type="radio"]{
+      float:left;
+      margin-top: 3px;}
+    input[type="text"]{
+      @include border-box;
+      width: 100%;
+      height: 30px;}
+    .btn{
+      margin: 20px 0 0 0;
+      width: 48%;
+      &.last{
+        float: right;} } } }
