--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,9 +4,10 @@ html(ng-app="myApp")
     meta(charset='utf8')
     base(href='/')
     title NMIS/LGA Facility Matching Tool
-    script(src='js/lib/angular/angular.min.js')
     script(src='js/lib/jquery/jquery-2.0.0.min.js')
-    script(src='js/lib/ui-bootstrap-tpls-0.2.0.js')
+    script(src='js/lib/angular/angular.min.js')
+    script(src='js/lib/bootstrap/bootstrap.min.js')
+    script(src='js/lib/angular-strap.js')
     link(rel='stylesheet', href='/css/bootstrap-combined.min.css')
     link(rel='stylesheet', href='/css/app.css')
 
