--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -193,7 +193,7 @@ table, .table{
         visibility: visible;}
       &:first-child{
         @include star;} }
-    &.rejected{
+    &.rejected:not(.active){
       opacity: 0.5; 
       &:hover{
       opacity: 0.8; } } } }
