added carrots, closes #59

--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -234,6 +234,9 @@ table, .table{
   width: 60px;
   height: 25px;
   margin: 0 0 -10px 0; }
+.carrot{
+  margin-left: 5px;
+  opacity: 0.6;}
 #nmis_list h3, #lga_list h3, .search{
   color: #ffffff;
 }
