--- a/views/partials/health.jade
+++ b/views/partials/health.jade
@@ -18,12 +18,16 @@ html
                     th  ID
                     th
                       a.hover(ng-click = "predicate = 'ward'; reverse = false") Ward
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'ward'")
                     th
                       a.hover(ng-click = "predicate = 'facility_name'; reverse = false") Facility Name
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'facility_name'")
                     th
                       a.hover(ng-click = "predicate = 'community'; reverse = false") Community
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'community'")
                     th
                       a.hover(ng-click = "predicate = 'facility_type'; reverse = false") Facility Type
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'facility_type'")
             .table-wrapper
               table.table
                 tbody
@@ -55,12 +59,16 @@ html
                     th  ID
                     th
                       a.hover(ng-click = "predicate = 'ward'; reverse = false") Ward
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'ward'")
                     th
                       a.hover(ng-click = "predicate = 'facility_name'; reverse = false") Facility Name
+                       i.carrot.icon-chevron-down(ng-show = "predicate == 'facility_name'")
                     th
                       a.hover(ng-click = "predicate = 'community'; reverse = false") Community
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'community'")
                     th
                       a.hover(ng-click = "predicate = 'facility_type'; reverse = false") Facility Type
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'facility_type'")
             .table-wrapper
               table.table
                 tbody
