--- a/views/partials/education.jade
+++ b/views/partials/education.jade
@@ -89,9 +89,9 @@ html
               button.btn.btn-small.btn-putback(ng-click="removePair(pair)")
                 .undo undo
               p
-                strong {{pair.facility_name}}
+                strong ({{pair.short_id}}) {{pair.facility_name}}
                 | &nbsp; (Facility List) -- (Baseline) &nbsp;
-                strong {{pair.nmis.facility_name}}
+                strong ({{pair.nmis.short_id}}) {{pair.nmis.facility_name}}
           div.putback-guidance If you made an error, put facilities back by clicking 
             button.btn.btn-small.btn-putback
               .undo undo
