--- a/public/sass/app.scss
+++ b/public/sass/app.scss
@@ -175,7 +175,7 @@ table, .table{
   th, td{
     &:first-child{
       width: 55px; }
-    &:nth-child(2), &:nth-child(2){
+    &:nth-child(2){
       width: 6%;}
     &:nth-child(3){
       width: 15%;}
