--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -12,20 +12,31 @@ html
                 thead
                   tr
                     th
-                      a.hover(ng-click = "predicate = 'state'; reverse = false") state
+                      a.hover(ng-click = "predicate = 'lga_id'; reverse = false") LGA_ID 
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'lga_id'")
+                    th
+                      a.hover(ng-click = "predicate = 'state'; reverse = true") STATE
                       i.carrot.icon-chevron-down(ng-show = "predicate == 'state'")
                     th
-                      a.hover(ng-click = "predicate = 'lga'; reverse = false") lga
+                      a.hover(ng-click = "predicate = 'lga'; reverse = true") LGA
                       i.carrot.icon-chevron-down(ng-show = "predicate == 'lga'")
                     th
-                      a.hover(ng-click = "predicate = 'total'; reverse = false") total(%)
-                      i.carrot.icon-chevron-down(ng-show = "predicate == 'total'")
+                      a.hover(ng-click = "predicate = 'edu_pctfinished'; reverse = true") % Finished (EDUCATION)
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'edu_pctfinished'")
+                    th
+                      a.hover(ng-click = "predicate = 'health_pctfinished'; reverse = true") % Finished (HEALTH)
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'health_pctfinished'")
+                    th
+                      a.hover(ng-click = "predicate = 'pctfinished'; reverse = true") % Finished (TOTAL)
+                      i.carrot.icon-chevron-down(ng-show = "predicate == 'pctfinished'")
             .table-wrapper
               table.table
                 tbody
-                  tr.hover(ng-repeat='lga in totals | orderBy:predicate:reverse | filter:nmisHealthSearch')
-                    td {{lga.state}}
-                    td {{lga.lga}}
-                    td {{lga.total}}
-                      a.btn-nomatch(ng-class='{remove: !facility.rejected, addback: facility.rejected}', bs-popover="'../js/lib/partials/popover.html'", data-unique="1", data-placement="bottom", data-title="{{facility.facility_name}} cannot be matched")
+                  tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:nmisHealthSearch')
+                    td {{totalDatum.lga_id}}
+                    td Todo
+                    td Todo
+                    td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
+                    td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
+                    td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
 
