--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -34,8 +34,8 @@ html
                 tbody
                   tr.hover(ng-repeat='totalDatum in totals | orderBy:predicate:reverse | filter:nmisHealthSearch')
                     td {{totalDatum.lga_id}}
-                    td Todo
-                    td Todo
+                    td {{totalDatum.state}}
+                    td {{totalDatum.lga}}
                     td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
                     td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
                     td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
