--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -39,4 +39,6 @@ html
                     td {{totalDatum.edu_pctfinished}} % ( {{totalDatum.edu_finished}} / {{totalDatum.edu_total}})
                     td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
                     td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
+  script
+    $('body, .main-wrapper, .main, .inner').css('height', 'auto')
 
