full width of the table

--- a/views/partials/lga.jade
+++ b/views/partials/lga.jade
@@ -40,5 +40,6 @@ html
                     td {{totalDatum.health_pctfinished}} % ( {{totalDatum.health_finished}} / {{totalDatum.health_total}})
                     td {{totalDatum.pctfinished}} % ( {{totalDatum.finished}} / {{totalDatum.total}})
   script
-    $('body, .main-wrapper, .main, .inner').css('height', 'auto')
+    $('body, .main-wrapper, .main, .inner').css('height', 'auto');
+    $('.main').css('width','100%');
 
